# LMS

./: .gitattributes  .gitignore  agi_ready_architecture.md  ai_learning_copilot.md  analytics_api.md  api_gateway_design.md  api_spec_validation_qc_gate_1.md  architecture_consistency_check_qc_gate1.md  auth_service_spec.md  config_service.md  content_api.md  content_storage_model.md  core_lms_schema.md  core_rest_api.md  core_system_architecture.md  course_service_spec.md  data_model_validation.md  define_ems_security_architecture.md  define_event_domains.md  define_service_map.md  domain_boundaries_lms_backend.md  ems_data_ownership_rules.md  event_bus_design.md  feature_inventory.md  file_storage_design.md  fix_repo_anchor_paths.py  hris_sync_spec.md  lesson_service_spec.md  lti_consumer_spec.md  lti_provider_spec.md  qc_gate_1_feature_completeness_check.md  qc_gate_2_database_schema_validation.md  qc_gate_2_event_architecture_validation.md  scalability_strategy.md  scorm_runtime_spec.md  spec_index.json  sso_spec.md  tenant_service_spec.md  validate_data_isolation.md  validate_service_boundaries.md
backend/services/media-pipeline-service/: README.md  pyproject.toml
backend/services/media-pipeline-service/events/: README.md  media_processing_completed.json  media_processing_started.json
backend/services/media-pipeline-service/modules/processing/: __init__.py
backend/services/media-pipeline-service/modules/storage/: cdn.py  config.py  service.py
backend/services/media-pipeline-service/tests/: test_pipeline.py  test_processing.py
frontend/: next.config.ts  (+2 more)
(+1215 files in other folders)
