[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-pipeline-service"
version = "0.1.0"
description = "LMS media upload, transcoding, thumbnailing, storage, and CDN publishing service"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
